# hpm5301_gpio_opt

./: CMakeLists.txt  README.md  app.yaml  build.bat  expansion.c  expansion.h  flash_uf2.ld  main.c  reset_way.c  reset_way.h  setting.c  setting.h
benchmark/: benchmark_readback.tcl
board/hslinkpro/: board.c  board.h  pinmux.c  start.S
dap/: DAP.c  DAP.h  DAP_config.h  DAP_vendor.c  dp_common.c
dap/JTAG_DP/: JTAG_DP.c  JTAG_DP.h  JTAG_DP_IO.c
dap/SW_DP/: SWD_Write_GPIO_Fast.s  SWD_Write_Opt.c  SWD_Write_Opt.s  SWD_Write_Opt_36M.c  SWD_Write_Opt_45M.c  SWD_Write_Opt_60M.c  SW_DP.c  SW_DP.h  SW_DP_IO.c  SW_DP_SPI.c
usb/: hid_comm.c  usb2uart.c  usb_config.h
